# pageup

./: .gitignore  README.md  main.py  models.py  pyproject.toml  settings.py  tools.py
docs/: sber-certificates-on-fedora-and-yandex-browser.md
scripts/: install-yandexdriver.sh  pack-for-sigma-docker.sh  pack-for-sigma.sh
src/pageup/: __init__.py  __main__.py  cli.py  config.py  models.py  runner.py  threads.py  tools.py
tests/: __init__.py  fixtures.py  test_cli.py  test_config.py  test_init.py  test_models.py  test_runner.py  test_threads.py  test_tools.py
tests/data/: sberchat-thread-panel-excerpt.html
