# ── Project metadata ────────────────────────────────────────────────────────
# PEP 621 project table.  uv reads this file to resolve and install dependencies;
# hatchling uses it to produce wheels and sdists.
#
# Distribution name and importable package are both "pageup" (see [project.scripts]).
[project]
name = "pageup"
version = "0.2.0"
description = "Collect SberChat group messages and thread replies, write JSON"
readme = "README.md"
# Python 3.13+ is required for the `type` soft-keyword (models.MsgDump) and
# modern typing features used throughout src/pageup/.
requires-python = ">=3.13"

# ── Runtime dependencies ─────────────────────────────────────────────────────
# Each package maps to a layer in the data path (see pageup.__init__ docstring).
dependencies = [
  "lxml>=5.4.0",           # BeautifulSoup parser backend (runner, threads, models)
  "beautifulsoup4>=4.14.3", # DOM parsing for message rows and thread panels (models)
  "emoji>=2.15.0",          # tools.remove_emoji — strip pictographs from message text
  "pydantic>=2.12.5",       # Message / ParsingTask validation and JSON serialisation
  "selenium>=4.39.0",       # Chrome WebDriver for Sberbrowser and Yandex Browser
  "tzdata>=2025.3",           # IANA zone data for tools.moscow_timezone (ZoneInfo on Linux)
  "typer>=0.15.0",           # CLI in cli.py; console script entry point in [project.scripts]
]

# ── Console entry points ──────────────────────────────────────────────────────
# After `uv sync`, `.venv/bin/pageup` invokes the Typer application object.
# On Sigma: `python3 -m pageup` via pageup.__main__ with PYTHONPATH set.
[project.scripts]
pageup = "pageup.cli:app"

# ── Build system ──────────────────────────────────────────────────────────────
# hatchling builds src/pageup into the wheel (see [tool.hatch.build.targets.wheel]).
# uv.lock (repo root) pins transitive deps for `uv sync --frozen` and
# scripts/pack-for-sigma.sh (`uv export --frozen`).  Regenerate with `uv lock`
# after changing dependencies above.  .python-version pins 3.13 for local uv.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# src layout: importable package lives under src/pageup/ (not repo-root pageup/).
packages = ["src/pageup"]
